# Flecs-Asteroid-Minigame

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
src/: Game.cpp  Game.h  Globals.h  main.cpp
src/Asteroid/: Asteroid.cpp  Asteroid.h
src/Collision/: Collision.cpp  Collision.h
src/Input/: Input.cpp  Input.h
src/PlayerStat/: PlayerStat.cpp  PlayerStat.h
src/Rendering/: DebugWindow.cpp  DebugWindow.h  Renderer.cpp  Renderer.h
src/Rocket/: Rocket.cpp  Rocket.h
src/Ship/: Ship.cpp  Ship.h
src/Space/: Space.cpp  Space.h
